Github Pages deployment

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,9 +1,9 @@
 {
   "title": "Narrative Jobs",
-  "url": "http://jobs.narrative.io",
+  "url": "https://jobs.narrative.io",
   "logo": {
-    "light": "/logo-light.svg",
-    "dark": "/logo-dark.svg"
+    "light": "logo-light.svg",
+    "dark": "logo-dark.svg"
   },
   "github": "narrative-io/narrative-jobs",
   "twitter": "@narrative_io"
