--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content-theme-docs": "^0.10.0",
     "nuxt": "^2.14.12"
+  },
+  "devDependencies": {
+    "push-dir": "^0.4.1"
   }
 }
