change defaultDir to make github links work

--- a/content/settings.json
+++ b/content/settings.json
@@ -6,5 +6,6 @@
     "dark": "logo-dark.svg"
   },
   "github": "narrative-io/narrative-jobs",
-  "twitter": "@narrative_io"
+  "twitter": "@narrative_io",
+  "defaultDir": ""
 }
