make logos absolute urls
fixes issue when someone is linked directly to a sub page: logo paths were being interpreted as relative

--- a/content/settings.json
+++ b/content/settings.json
@@ -2,8 +2,8 @@
   "title": "Narrative Jobs",
   "url": "https://jobs.narrative.io",
   "logo": {
-    "light": "logo-light.svg",
-    "dark": "logo-dark.svg"
+    "light": "/logo-light.svg",
+    "dark": "/logo-dark.svg"
   },
   "github": "narrative-io/narrative-jobs",
   "twitter": "@narrative_io",
